--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@
   max-width: 1071px;
   height: 563px;
 
-  margin-left: 230px;
+  margin-left: 166px;
   margin-top: 154px;
 }
 
@@ -273,20 +273,28 @@
 
 .sect2_content {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  gap: 70px;
 
 }
 
-.left_side_sect2 img {
-  width: 500px;
+.main_img img {
+  width: 450px;
+  margin-left: 95px;
 
 }
 
-/* .right-side  {
-    width: 500px;
-    height: 479px;
-    border: 1px solid red;
-} */
+.secnd-img {
+  position: relative;
+  bottom: 119px;
+}
+
+
+.right-side {
+  max-width: 500px;
+}
+
 
 .sect2_heading {
   position: relative;
@@ -304,13 +312,13 @@
 }
 
 .sect2_heading img {
-  padding-left: 22px;
+  padding-left: 44px;
 }
 
-.sect2_heading p {
+.sect2_heading h6 {
   position: absolute;
   bottom: 15px;
-  left: 109px;
+  left: 144px;
   font-size: 30px;
   line-height: 120%;
   font-family: "Abril Fatface", serif;
@@ -319,6 +327,124 @@
 
 }
 
-.sect2_heading p span {
+.sect2_heading h6 span {
   color: var(--color_2-primary);
 }
+
+.right-side p {
+  font-size: 22px;
+  line-height: 160%;
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 500;
+  color: var(--color_2-primary);
+}
+
+
+
+.right-side_btn {
+  padding-top: 53px;
+
+}
+
+
+.right-side_btn a {
+
+  padding: 17px 37px 17px 43px;
+  background-color: var(--color_5-primary);
+  border-radius: 28px;
+  font-size: 18px;
+  line-height: 1.2em;
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  color: var(--color_4-primary);
+  box-shadow: rgba(238, 164, 68, 0.2) 0px 8px 24px;
+}
+
+/* SECTION-3 STRAT  */
+.section-3 {
+
+  min-height: 1058px;
+}
+
+ .sect-3_heading {
+  background-image: url(img/Vector\ 173\ \(1\).png); 
+  background-repeat: no-repeat;
+ 
+  background-position: center;
+  background-position-y: 0;
+  
+ 
+ }
+ .sect-3_heading h2 {
+  text-align: center;
+  font-size: 60px;
+  line-height: 120%;
+  color: var(--color_3-primary);
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  padding-bottom: 16px;
+  padding-left: 32px;
+}
+.sect-3_heading p {
+  text-align: center;
+  font-size: 22px;
+  line-height: 160%;
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 400;
+  color: var(--color_2-primary);
+}
+
+
+.section-3_content{
+display:flex ;
+gap: 50px;
+
+}
+
+
+
+
+
+.content-card  {
+ max-width: 370px;
+ min-height: 601px;
+  transition: .50s ease-in-out;
+}
+.content-card  h6 {
+  text-align: center;
+  font-size: 30px;
+  line-height: 160%;
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  color: var(--color-_12primary);
+}
+.content-card  p {
+  text-align: center;
+  font-size: 20px;
+  line-height: 160%;
+  font-family: "Roboto Flex", sans-serif;
+  font-weight: 400;
+  color: var(--color_2-primary);
+}
+.content-card:hover {
+  background-color: #c4dffb;
+  box-shadow: 6px 5px 6px 5px #00000018;
+  border-radius: 28px; 
+  color:#C9B5D8 ;
+
+}
+.section-3 .first:hover {
+  padding-top: 30px;
+  
+}
+.section-3 .second:hover {
+  padding-top: 40px;
+  background-color: #de7456;
+}
+.section-3 .third:hover {
+  padding-top: 50px;
+  background-color: #2b3240;
+   
+}
+
+ 
