--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ html {
 .header_content {
   display: flex;
   justify-content: space-between;
+   
 }
 
 .header_1st {
@@ -890,4 +891,23 @@ html {
 
 .card4:hover .discord {
   fill: white;
+}
+
+
+
+/* TAbLATE REsponsive  */
+
+@media  (min-width:768px) And (max-width:1100px) {
+
+/* section-1  */
+
+.header_1st img {
+  width: 370px;
+}
+
+
+
+
+
+  
 }
